--- a/index.html
+++ b/index.html
@@ -15,9 +15,19 @@ c<!DOCTYPE html>
 				/>
 			</div>
 			<div class="postcard-body">
-				<div class="body-left"> I am the </div>
+				<div class="body-left">
+					<p>Look how awesome! This is a postcard that I created using HTML5 and CSS3 during my 4Geeks Academy Course!</p>
+					<p>This is so cool, can't wait to start doing more stuff!</p>
+				</div>
+				<div class="body-right">
+					<input type="text" placeholder="Some Name" />
+					<input type="text" placeholder="Some Email" />
+					<input type="text" placeholder="Some comment" />
+				</div>
 			</div>
-			<div class="postcard-footer"></div>
+			<div class="postcard-footer">
+				<button>Send My Postcard</button>
+			</div>
 		</div>
 	</body>
 </html>
